force-app/main/default/objects/MUSW__GIS_Layer_Setting__mdt/MUSW__GIS_Layer_Setting__mdt.object-meta.xml
<CustomObject>
    <label>GIS Layer Setting</label>
    <pluralLabel>GIS Layer Settings</pluralLabel>
</CustomObject>