force-app/main/default/objects/MUSW__GIS_Layer_Setting__mdt/fields/MUSW__Default_On__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Default_On__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether a feature layer should be turned ON by default on the map, and use the layer toggle to turn ON and OFF the layer.</description>
    <inlineHelpText>Set this to true if the feature layer should be displayed on the map by default.</inlineHelpText>
    <label>Default On</label>
    <type>Checkbox</type>
</CustomField>