force-app/main/default/objects/MUSW__GIS_Layer_Setting__mdt/fields/MUSW__GIS_Map_Setting__c.field-meta.xml
<CustomField>
    <fullName>MUSW__GIS_Map_Setting__c</fullName>
    <description>Basemap Setting to relate this layer settings to</description>
    <inlineHelpText>Basemap Setting to relate this layer settings to</inlineHelpText>
    <label>GIS Map Setting</label>
    <referenceTo>MUSW__GIS_Map_Setting__mdt</referenceTo>
    <relationshipLabel>GIS Layer Settings</relationshipLabel>
    <relationshipName>GIS_Layer_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>