force-app/main/default/objects/MUSW__GIS_Layer_Setting__mdt/fields/MUSW__Label_Attribute__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Label_Attribute__c</fullName>
    <description>An attribute name from ESRI which will be used for labeling the features on the map.</description>
    <inlineHelpText>(Optional) Please provide an attribute name from ESRI which will be used for labeling the features on the map.</inlineHelpText>
    <label>Label Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>