force-app/main/default/objects/MUSW__GIS_Layer_Setting__mdt/fields/MUSW__Tooltip_Attribute__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Tooltip_Attribute__c</fullName>
    <description>A field name from the feature layer, that will be displayed in a tooltip when hovering over the feature layer.</description>
    <inlineHelpText>Provide one field name from the feature layer, that will be displayed in a tooltip when hovering over the feature layer.</inlineHelpText>
    <label>Tooltip Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>