force-app/main/default/objects/MUSW__GIS_Layer_Setting__mdt/fields/MUSW__Url__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Url__c</fullName>
    <description>Feature/Map Server Url</description>
    <inlineHelpText>Feature/Map Server Url</inlineHelpText>
    <label>Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>